--- a/AZMonitoring/Views/ChatingPage.xaml
+++ b/AZMonitoring/Views/ChatingPage.xaml
@@ -28,7 +28,7 @@
                 </Border.Background>
             </Border>
             <TextBlock x:Name="TXTName" Grid.Column="1" Margin="10,0" VerticalAlignment="Center" FontFamily="Tahoma" FontSize="30" TextAlignment="Center"/>
-            <materialDesign:PackIcon x:Name="VideoChatIcon" materialDesign:ShadowAssist.ShadowDepth="Depth2" Kind="VideoCall" Grid.Column="2" Height="50" Width="50" Foreground="White" MouseLeftButtonUp="PackIcon_MouseLeftButtonUp"/>
+            <materialDesign:PackIcon x:Name="VideoChatIcon" Cursor="Hand" materialDesign:ShadowAssist.ShadowDepth="Depth2" Kind="VideoCall" Grid.Column="2" Height="50" Width="50" Foreground="White" MouseLeftButtonUp="PackIcon_MouseLeftButtonUp"/>
         </Grid>
         <ScrollViewer x:Name="MessageScroller"  Grid.Row="1"  ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView x:Name="LISTCurrentChatMessages" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Bottom" Background="{x:Null}">
@@ -42,11 +42,11 @@
                         <Grid HorizontalAlignment="Stretch">
                             <Border CornerRadius="10" Padding="10"  Background="{Binding Background}" HorizontalAlignment="{Binding Alignment1}" MaxWidth="240">
                                 <StackPanel>
-                                    <TextBlock Text="{Binding Text}" HorizontalAlignment="{Binding Alignment1}" FlowDirection="RightToLeft" TextWrapping="WrapWithOverflow" Foreground="Black" />
+                                    <TextBlock Text="{Binding Text}" HorizontalAlignment="{Binding Alignment1}" FlowDirection="RightToLeft" TextWrapping="Wrap" Foreground="Black" />
                                     <Image Source="{Binding Image}"/>
                                     <TextBlock FontSize="10" HorizontalAlignment="Center" >
                                     <Hyperlink NavigateUri="{Binding Link}" RequestNavigate="Hyperlink_RequestNavigate" >
-                                        <TextBlock Foreground="#FF0202CF" Text="{Binding Link}"/>
+                                        <TextBlock Foreground="#FF0202CF" Text="{Binding Link}" TextWrapping="Wrap"/>
                                     </Hyperlink>
                                 </TextBlock>
                                     <TextBlock Text="{Binding Date}" FontSize="10" HorizontalAlignment="{Binding Alignment2}"/>
@@ -63,11 +63,26 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="BTNSendPH" Margin="5" ToolTip="إرفاق ملف او صورة او فيديو" Content="" Style="{DynamicResource BTN1}"/>
+            <Button x:Name="BTNSendPH" 
+                    Margin="5" 
+                    Style="{DynamicResource MaterialDesignRaisedButton}"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth2" 
+                    ToolTip="إرفاق ملف او صورة او فيديو" 
+                    Click="BTNSendPH_Click"  >
+                <materialDesign:PackIcon Kind="Attachment" Foreground="White" Margin="-17,-3" Height="30" Width="30"/>
+            </Button>
             <Border Style="{DynamicResource BRD1}" Grid.Column="1">
-                <TextBox x:Name="TXTMassage" AcceptsReturn="True" AcceptsTab="True"  Background="{x:Null}" BorderThickness="0" TextWrapping="WrapWithOverflow" KeyUp="TextBox_KeyUp" BorderBrush="{x:Null}" />
+                <TextBox x:Name="TXTMassage" AcceptsTab="True"  Background="{x:Null}" BorderThickness="0" ToolTip="هنا تكتب الرسالة -- اضغط shift + Enter للنزل إلي سطر جديد قبل الارسال" TextWrapping="WrapWithOverflow" KeyUp="TextBox_KeyUp" BorderBrush="{x:Null}" />
             </Border>
-            <Button x:Name="BTNSend" Grid.Column="3" Click="BTNSend_Click" Margin="5" Content="" ToolTip="ارسال (Shift + Enter)" Style="{DynamicResource BTN1}"/>
+            <Button x:Name="BTNSend" 
+                    Grid.Column="3" 
+                    Click="BTNSend_Click" 
+                    Margin="5" 
+                    ToolTip="ارسال (Shift + Enter)" 
+                    Style="{DynamicResource MaterialDesignRaisedButton}"
+                    materialDesign:ShadowAssist.ShadowDepth="Depth2" >
+                <materialDesign:PackIcon Kind="SendOutline" Margin="-17,-1" Foreground="White" Height="26" Width="30"/>
+            </Button>
         </Grid>
     </Grid>
 </Page>
