--- a/AZMonitoring/Views/Province/Prov_Page.xaml
+++ b/AZMonitoring/Views/Province/Prov_Page.xaml
@@ -12,101 +12,62 @@
       Title="Prov_Page">
     <StackPanel>
         <GroupBox x:Name="GBGA" FlowDirection="RightToLeft" Padding="10" Margin="5" Header="الادارة المركزية لمحافظة القاهرة" Foreground="White">
-            <Grid Height="180">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <materialDesign:Card Margin="10" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand" MouseLeftButtonUp="Grid_MouseLeftButtonUp">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="80"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="3*"/>
-                            <RowDefinition Height="2*"/>
-                        </Grid.RowDefinitions>
-                        <Border Margin="5" CornerRadius="40" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2">
+            <UniformGrid Rows="2" Columns="2">
+                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
+                    <StackPanel Orientation="Horizontal" >
+                        <Border Margin="10" CornerRadius="30" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2" Height="60" VerticalAlignment="Bottom" Width="60">
                             <Border.Background>
-                                <ImageBrush x:Name="IMGHCA"/>
+                                <ImageBrush ImageSource="{Binding Path=HCAdministrationID.Photo, IsAsync=True}"/>
                             </Border.Background>
                         </Border>
-                        <TextBlock Text="رئيس الادارة المركزية" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
-                        <TextBlock x:Name="TXTHCAdmin" Text="رئيس الادارة المكزية" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20"/>
-                    </Grid>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="8">
+                            <TextBlock Text="رئيس الادارة المركزية" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
+                            <TextBlock Text="{Binding Path=HCAdministrationID.Name}" VerticalAlignment="Center" FontSize="20"/>
+                        </StackPanel>
+                    </StackPanel>
                 </materialDesign:Card>
-                <materialDesign:Card Margin="10" Background="{DynamicResource  PrimaryHueMidBrush}" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth3"  Cursor="Hand" MouseLeftButtonUp="Grid_MouseLeftButtonUp_1">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="80"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="3*"/>
-                            <RowDefinition Height="2*"/>
-                        </Grid.RowDefinitions>
-                        <Border Margin="5" CornerRadius="40" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2">
+                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand" >
+                    <StackPanel Orientation="Horizontal" >
+                        <Border Margin="10" CornerRadius="30" BorderBrush="White" BorderThickness="1" Height="60" VerticalAlignment="Bottom" Width="60">
                             <Border.Background>
-                                <ImageBrush x:Name="IMGLAG"/>
+                                <ImageBrush ImageSource="{Binding Path=LegalAgentDGID.Photo, IsAsync=True}"/>
                             </Border.Background>
                         </Border>
-                        <TextBlock Text="الوكيل الشرعي (مدير عام)" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
-                        <TextBlock x:Name="TXTLAgent" Text="رئيس الادارة المركزية" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20"/>
-                    </Grid>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="8">
+                            <TextBlock Text="الوكيل الشرعي (مدير عام)" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
+                            <TextBlock Text="{Binding Path=LegalAgentDGID.Name}" VerticalAlignment="Center" FontSize="20"/>
+                        </StackPanel>
+                    </StackPanel>
                 </materialDesign:Card>
-                <materialDesign:Card Margin="10" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" 
-                        Grid.Row="1" 
-                        Cursor="Hand" 
-                        MouseLeftButtonUp="Grid_MouseLeftButtonUp_2">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="80"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="3*"/>
-                            <RowDefinition Height="2*"/>
-                        </Grid.RowDefinitions>
-                        <Border Margin="5" CornerRadius="40" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2">
+                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand" >
+                    <StackPanel Orientation="Horizontal" >
+                        <Border Margin="10" CornerRadius="30" BorderBrush="White" BorderThickness="1" Height="60" VerticalAlignment="Bottom" Width="60">
                             <Border.Background>
-                                <ImageBrush x:Name="IMGCAG"/>
+                                <ImageBrush ImageSource="{Binding Path=CulturalAgentDGID.Photo, IsAsync=True}"/>
                             </Border.Background>
                         </Border>
-                        <TextBlock Text="الوكيل الثقافي (مدير عام)" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
-                        <TextBlock x:Name="TXTCAgent" Text="رئيس الادارة المكزية" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20"/>
-                    </Grid>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="8">
+                            <TextBlock Text="الوكيل الثقافي (مدير عام)" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
+                            <TextBlock Text="{Binding Path=CulturalAgentDGID.Name}" VerticalAlignment="Center" FontSize="20"/>
+                        </StackPanel>
+                    </StackPanel>
                 </materialDesign:Card>
-                <materialDesign:Card Margin="10" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" 
-                        Grid.Column="1" 
-                        Cursor="Hand"
-                        Grid.Row="1" 
-                        MouseLeftButtonUp="Grid_MouseLeftButtonUp_3">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="80"/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="3*"/>
-                            <RowDefinition Height="2*"/>
-                        </Grid.RowDefinitions>
-                        <Border Margin="5" CornerRadius="40" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2">
+                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand" >
+                    <StackPanel Orientation="Horizontal" >
+                        <Border Margin="10" CornerRadius="30" BorderBrush="White" BorderThickness="1" Height="60" VerticalAlignment="Bottom" Width="60">
                             <Border.Background>
-                                <ImageBrush x:Name="IMGSW"/>
+                                <ImageBrush ImageSource="{Binding Path=SWelfareDID.Photo, IsAsync=True}"/>
                             </Border.Background>
                         </Border>
-                        <TextBlock Text="مدير رعاية الطلاب" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
-                        <TextBlock x:Name="TXTSWelfare" Text="رئيس الادارة المكزية" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20"/>
-                    </Grid>
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="8">
+                            <TextBlock Text="مدير رعاية الطلاب" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
+                            <TextBlock Text="{Binding Path=SWelfareDID.Name}" VerticalAlignment="Center" FontSize="20"/>
+                        </StackPanel>
+                    </StackPanel>
                 </materialDesign:Card>
-            </Grid>
+            </UniformGrid>
         </GroupBox>
-        <GroupBox x:Name="GBA"  FlowDirection="RightToLeft" Padding="10" Margin="5" Header=" الادارات العليمية لمحافظة القاهرة" Foreground="White">
+        <GroupBox x:Name="GBI"  FlowDirection="RightToLeft" Padding="10" Margin="5" Header=" الادارات العليمية لمحافظة القاهرة" Foreground="White">
             <ListView x:Name="LVInstructs" Height="110" Background="#26000000" BorderBrush="{x:Null}">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -115,10 +76,15 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
-                        <Setter Property="Background" Value="AliceBlue"/>
-                        <Setter Property="Cursor" Value="Hand"/>
-                        <Setter Property="Height" Value="100"/>
+                        <Setter Property="Margin" Value="5,0"/>
+                        <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick_1"/>
+                        <Setter Property="Padding" Value="5"/>
+                        <Setter Property="Background" Value="#4db6ac"/>
+                        <Setter Property="Height" Value="90"/>
                         <Setter Property="Width" Value="160"/>
+                        <Setter Property="Cursor" Value="Hand"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="materialDesign:ShadowAssist.ShadowDepth" Value="Depth4"/>
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
@@ -128,7 +94,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </GroupBox>
-        <GroupBox x:Name="GBI"  FlowDirection="RightToLeft" Padding="10" Margin="5" Header="التوجيه بمحافظة القاهرة" Foreground="White">
+        <GroupBox x:Name="GBA"  FlowDirection="RightToLeft" Padding="10" Margin="5" Header="التوجيه بمحافظة القاهرة" Foreground="White">
             <ListView x:Name="LVAdministrations" Height="110" BorderBrush="{x:Null}" Background="#26000000">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -137,17 +103,20 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
-                        <Setter Property="Background" Value="#55ffffff"/>
-                        <Setter Property="Cursor" Value="Hand"/>
-                        <Setter Property="BorderBrush" Value="White"/>
-                        <Setter Property="BorderThickness" Value="1"/>
-                        <Setter Property="Height" Value="100"/>
+                        <Setter Property="Margin" Value="5,0"/>
+                        <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick"/>
+                        <Setter Property="Padding" Value="5"/>
+                        <Setter Property="Background" Value="#4db6ac"/>
+                        <Setter Property="Height" Value="90"/>
                         <Setter Property="Width" Value="160"/>
+                        <Setter Property="Cursor" Value="Hand"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="materialDesign:ShadowAssist.ShadowDepth" Value="Depth4"/>
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="Tahoma" FontSize="18" TextAlignment="Center" TextWrapping="WrapWithOverflow"/>
+                        <TextBlock Text="{Binding Name}" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="Tahoma" FontSize="18" TextAlignment="Center" TextWrapping="Wrap"/>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
